--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,14 @@
 		--background-end-rgb: 0, 0, 0;
 	}
 }
+
+body {
+	font-family: var(--font-lato);
+	font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+	font-family: var(--font-proza-libre);
+}
