--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato|Proza+Libre&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -36,7 +36,7 @@ body {
 h1,
 h2,
 h3 {
-	font-family: var(--font-proza-libre);
+	font-family: "Proza Libre", sans-serif;
 }
 
 p {
